--- a/Backend/.env
+++ b/Backend/.env
@@ -1,14 +1,13 @@
-PORT=5000
-DB_URL=mongodb+srv://stromridex_db_user:fiHXDitb8UB6H8T0@cluster0.qmlfdge.mongodb.net/Easy-Drive?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET_KEY =qwerty@12345&ucgufygw7fwufbq7y8fbf
+PORT=
+DB_URL=
+JWT_SECRET_KEY =
 
 
-CLOUDINARY_API_KEY=118898117917674
-CLOUDINARY_API_SECRET=QYpImz64ynipSqnHY7_BmYzFuqI
-CLOUDINARY_CLOUD_NAME=dllpv0k9t
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
+FRONTEND_URL= 
 
-FRONTEND_URL= http://localhost:5173
-
-RESEND_API_KEY=re_BULxrSPF_2LeRQm61hZaq88ieZFkvRVVG
-RAZORPAY_SECRET=QXZRIHp5PUVLTmywoALVYrdH
-RAZORPAY_KEY_ID=rzp_test_64vddPmB4Vm0TJ
+RESEND_API_KEY=
+RAZORPAY_SECRET=
+RAZORPAY_KEY_ID=
